# Xai_Community

./: .gitignore  CLAUDE.md  cleanup_test_data.py  comprehensive_test_script.py  create_correct_service_post.py  create_proper_service_post.py  key.base64  render.yaml  rollback-full.sh  second_user_comment_test.py  test-create-service-posts.js  test_create_service.py  verify-rollback.sh  종합_분석_및_패키지화_가이드.md
backend/: .dockerignore  .env.dev  .env.example  .env.prod  .env.staging  .env.test  =5.0.0  Dockerfile  Makefile  PACKAGE_MIGRATION_VALIDATION.md  README.md  README_EXPERT_TIPS_GENERATOR.md  analyze_db_indexes.py  api_performance_test.py  check_db_data.py  check_post_exists.py  check_property_posts.py  check_types.py  check_user_data.py  create_indexes.py  create_property_info_posts.py  create_test_service.py  debug_aggregation_author.py  debug_complete_method.py  debug_config.py  deploy-cloud-run.sh  deploy-production.sh  deploy-staging.sh  deploy-xai-community.sh  docker-compose.vm.yml  final_performance_comparison.py  generate_expert_tips_api.py  generate_expert_tips_data.py  generate_property_info_data.py  health-check.sh  initialize_bookmark_counts.py  main.py  main_minimal.py  mongodb_index_analysis.json  monitor-vm.sh  (+21 more)
backend/config/: .env.example
backend/deploy/vm/: docker-compose.yml  nginx.conf
backend/docs/: fastapi_docs_test_guide.md  테스트_실행_가이드.md
backend/nadle_backend/: __init__.py  cli.py  config.py  deploy_config.py
backend/nadle_backend/database/: connection.py  manager.py  redis.py  redis_factory.py  upstash_redis.py
backend/nadle_backend/dependencies/: auth.py
backend/nadle_backend/exceptions/: auth.py  comment.py  post.py  user.py
backend/nadle_backend/logging/: structured_logger.py
backend/nadle_backend/middleware/: __init__.py  logging_middleware.py  monitoring.py  security.py  sentry_middleware.py
backend/nadle_backend/models/: __init__.py  alerts.py  content.py  core.py  email_verification.py
backend/nadle_backend/monitoring/: __init__.py  sentry_config.py
backend/nadle_backend/repositories/: comment_repository.py  email_verification_repository.py  file_repository.py  post_repository.py  user_reaction_repository.py  user_repository.py
backend/nadle_backend/routers/: __init__.py  alerts.py  auth.py  comments.py  content.py  file_upload.py  health.py  intelligent_alerting.py  monitoring.py  posts.py  uptime_monitoring.py  users.py
backend/nadle_backend/schemas/: alerts.py
backend/nadle_backend/services/: auth_service.py  cache_service.py  comments_service.py  content_service.py  email_service.py  email_verification_service.py  endpoint_monitoring_service.py  file_metadata.py  file_storage.py  file_validator.py  hetrix_monitoring.py  intelligent_alerting.py  monitoring_service.py  notification_service.py  popular_posts_cache_service.py  post_stats_cache_service.py  posts_service.py  sentry_monitoring_service.py  session_service.py  token_blacklist_service.py  uptime_monitoring.py  user_activity_service.py
backend/nadle_backend/utils/: jwt.py  password.py  permissions.py  security.py  token_security.py
backend/scr/: main.py
backend/scripts/: __init__.py  auto_setup_test_data.py  clear_database.py  clear_database_except_property_info.py  create_admin.py  manage_admin.py
backend/scripts/info_content/: base_creator.py  create_sample_content.py
backend/src/: config.py  main.py
backend/src/database/: __init__.py  connection.py  manager.py
backend/src/dependencies/: auth.py
backend/src/exceptions/: __init__.py  auth.py  base.py  comment.py  user.py
backend/src/models/: __init__.py  content.py  core.py
backend/src/repositories/: comment_repository.py  file_repository.py  post_repository.py  user_repository.py
backend/src/routers/: __init__.py  auth.py  comments.py  content.py  file_upload.py  posts.py  stats.py
backend/src/services/: auth_service.py  comments_service.py  content_service.py  posts_service.py
backend/src/utils/: jwt.py  permissions.py
backend/tests/: EPIC_FEATURE_MAPPING.md  README.md  README_TEST_COMPREHENSIVE.md  README_TEST_REFACTORING.md  TEST_USAGE_GUIDE.md  conftest.py  test_post_stats_cache.py  test_token_blacklist.py
backend/tests/contract/: test_editor_api_contract.py
backend/tests/e2e/: test_editor_api.py  test_service_posts_api.py  test_ssr_pages_performance.py
backend/tests/functional/: test_complete_aggregation.py  test_complete_http_api.py
backend/tests/integration/: test_api_integration.py  test_atlas_data_verification.py  test_auth_router.py  test_auth_router_enhanced.py  test_comments_router.py  test_current_baseline.py  test_discord_webhook_real.py  test_dynamic_configuration.py  test_editor_api.py  test_email_notification_real.py  test_email_verification_api.py  test_email_verification_e2e.py  test_email_verification_system.py  test_file_api_contract.py  test_hetrixtools_real.py  test_intelligent_alerting_api.py  test_intelligent_alerting_system_e2e.py  test_key_namespacing.py  test_monitoring_api.py  test_monitoring_api_e2e.py  test_monitoring_api_http.py  test_monitoring_api_integration.py  test_monitoring_api_redis.py  test_monitoring_metrics.py  test_monitoring_real_system.py  test_monitoring_redis_integration.py  test_popular_posts_cache.py  test_post_detail_integration.py  test_posts_router.py  test_posts_router_enhanced.py  test_reactions_router.py  test_redis_cache.py  test_redis_factory_compatibility.py  test_security_integration.py  test_sentry_integration.py  test_sentry_middleware.py  test_session_store.py  test_simple_namespacing.py  test_smtp_connection.py  test_ssr_pages_performance.py  (+6 more)
backend/tests/load/: locust_basic_scenarios.py  locust_readonly_test.py  performance_comparison_test.py  test_performance.py
backend/tests/performance/: complete_aggregation_comparison_test.py  test_aggregation.py
backend/tests/results/: cache_performance_results.json  complete_aggregation_results.json  performance_results_detailed.json
backend/tests/security/: test_refresh_token.py
cloud-run-experiment/: Dockerfile  README.md  deploy.sh  pyproject.toml
(+557 files in other folders)
